# MOMDP-DESPOT-framework

./: README.md
ROSPlan/src/rosplan_momdp/: CMakeLists.txt  README.md  Usage.txt  package.xml
ROSPlan/src/rosplan_momdp/examples/POMDPX/: ActionMonitorNew.pomdpx
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/: DespotSol.h  PDDLMOMDP.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Algorithms/: PointBasedAlgorithm.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Algorithms/SARSOP/: BinManager.h  BinManagerSet.h  Prune.h  SARSOP.h  SARSOPPrune.h  Sample.h  SampleBP.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Bounds/: AlphaPlane.h  AlphaPlanePool.h  AlphaPlanePoolSet.h  AlphaVectorPolicy.h  BackupAlphaPlaneMOMDP.h  BackupAlphaPlaneMOMDPLite.h  BackupBeliefValuePairMOMDP.h  BackupBeliefValuePairMOMDPLite.h  BeliefValuePair.h  BeliefValuePairPool.h  BeliefValuePairPoolSet.h  BlindLBInitializer.h  FastInfUBInitializer.h  FullObsUBInitializer.h  PruneAlphaPlane.h  PruneBeliefValuePair.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Controller/: Controller.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Core/: Actions.h  Backup.h  Belief.h  BeliefCache.h  BeliefCacheRow.h  BeliefCacheSet.h  BeliefForest.h  BeliefTransition.h  BeliefTreeNode.h  BeliefWithState.h  Bound.h  BoundSet.h  FacmodelStructs.h  Observations.h  States.h  UniqueBeliefHeap.h  VariableContainer.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Evaluator/: EvaluationEngine.h  EvaluatorBeliefTreeNodeTuple.h  EvaluatorSampleEngine.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/MathLib/: DenseVector.h  MathLib.h  SparseMatrix.h  SparseVector.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Models/MOMDP/: BeliefTransitionMOMDP.h  BeliefTransitionMOMDPLite.h  BooleanVariable.h  IVariable.h  IVariableValue.h  MOMDP.h  MOMDPLite.h  ObservationProbabilities.h  (+9 more)
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/OfflineSolver/: GlobalResource.h  solverUtils.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Parser/: ParserSelector.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/PolicyGraph/: PolicyGraphGenerator.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Simulator/: SimulationEngine.h
ROSPlan/src/rosplan_momdp/include/rosplan_momdp/Utils/: SimulationRewardCollector.h  StatsCollector.h  md5wrapper.h
ROSPlan/src/rosplan_momdp/src/: DespotSol.cpp  PDDLMOMDP.cpp
(+639 files in other folders)
